feat: implementar sistema de posts con moderación automática
- Agregar endpoints CRUD de posts
- Integrar moderación de texto (PurgoMalum + Sightengine)
- Integrar moderación de imágenes (Sightengine)
- Implementar upload de imágenes a Firebase Storage
- Configurar reglas de Storage y índices de Firestore

--- a/.env
+++ b/.env
@@ -1,5 +1,23 @@
+# Firebase
 FIREBASE_CREDENTIALS_PATH=./serviceAccountKey.json
 FIREBASE_WEB_API_KEY=AIzaSyDlMw1hGkhYb4lrZRki1-FuC-bNLGAvSh8
+FIREBASE_STORAGE_BUCKET=nuvora-a342d.firebasestorage.app
+
+# JWT
 JWT_SECRET_KEY=super-secret-key-change-in-production-12345678
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_HOURS=24
+
+# Moderation APIs
+# PurgoMalum - NO requiere API key (gratuito para texto/profanidad)
+
+# Sightengine - RECOMENDADO para moderación de imágenes (gratuito hasta 500 requests/mes)
+# Obtener en https://sightengine.com/signup
+SIGHTENGINE_API_USER=483943668
+SIGHTENGINE_API_SECRET=YNAfkfxhucRCa5TNW8bL8hzpU43wkyDL
+
+# ModerateContent API - Opcional (obtener en https://moderatecontent.com/)
+MODERATECONTENT_API_KEY=
+
+# OpenAI API - Opcional (obtener en https://platform.openai.com/api-keys)
+OPENAI_API_KEY=
