feat: Implementar sistema completo de notificaciones push con FCM HTTP v1
- Agregar modelos Pydantic para notificaciones (notification.py)
- Crear servicio FCM usando Firebase Admin SDK con HTTP v1 (fcm_service.py)
- Implementar router de notificaciones con endpoints CRUD
- Agregar triggers automáticos de notificaciones en likes y comentarios
- Actualizar endpoint PUT /profile/me para aceptar fcm_token
- Crear índice compuesto en Firestore (user_id + created_at)
- Guardar notificaciones en Firestore independientemente del envío push
- Incluir fcm_token en respuestas de profile (perfil)

Endpoints nuevos:
- POST /notifications/send - Enviar notificación manual
- GET /notifications/ - Obtener notificaciones del usuario
- PUT /notifications/mark-as-read - Marcar como leídas
- DELETE /notifications/{id} - Eliminar notificación

Características:
- Notificaciones automáticas al recibir likes
- Notificaciones automáticas al recibir comentarios
- Historial de notificaciones en Firestore
- Sistema listo para integración con app Android
- No requiere Server Key Legacy (usa OAuth 2.0)

Nota: FCM token debe ser enviado desde la app móvil después de login

--- a/.env
+++ b/.env
@@ -21,3 +21,8 @@ MODERATECONTENT_API_KEY=
 
 # OpenAI API - Opcional (obtener en https://platform.openai.com/api-keys)
 OPENAI_API_KEY=
+
+# Firebase Cloud Messaging (FCM)
+# NO SE NECESITA SERVER KEY - Firebase Admin SDK usa HTTP v1 automáticamente con serviceAccountKey.json
+# Sender ID (solo para referencia)
+FCM_SENDER_ID=878232540597
