feat: implementar monitoreo con Datadog para metricas de produccion
Integracion completa de Datadog para observabilidad del microservicio:

Cambios principales:
- Crear servicio DatadogService con soporte para API HTTP v2
- Implementar envio de metricas sin necesidad de Datadog Agent
- Configurar endpoint dinamico según region (US5)
- Implementar manejo de errores defensivo para no afectar la API

Metricas implementadas:
- Auth: intentos de registro/login, exitos, fallos y duraciones
- Posts: creacion, moderacion, contadores totales
- Likes: intentos de like, exitos, duraciones
- Gauges: contadores de usuarios y posts activos

Archivos modificados:
- app/services/datadog_service.py (nuevo)
- app/routers/auth.py (añadir tracking)
- app/routers/posts.py (añadir tracking)
- app/routers/likes.py (añadir tracking)
- app/main.py (inicialización con fallback)
- app/config.py (configuración Datadog)
- requirements.txt (dependencias)

Caracteristicas:
- Metricas enviadas a Datadog US5 site
- Fallback graceful si Datadog no esta disponible
- Tags automaticos: service, env, version
- Decorador reutilizable para timing de endpoints

Dependencias implementadas:
- datadog==0.49.1
- ddtrace==2.14.0

--- a/.env
+++ b/.env
@@ -26,3 +26,18 @@ OPENAI_API_KEY=
 # NO SE NECESITA SERVER KEY - Firebase Admin SDK usa HTTP v1 automáticamente con serviceAccountKey.json
 # Sender ID (solo para referencia)
 FCM_SENDER_ID=878232540597
+
+# ==================== DATADOG ====================
+# Obtener en: https://app.datadoghq.com/organization-settings/api-keys
+# Datadog Configuration
+DATADOG_API_KEY=b109bf5f509724e29e5989b555408817
+DATADOG_APP_KEY=fc47756dccccf115b69a6d02004d580f84522c7e
+DATADOG_SERVICE_NAME=edel-socialapp-api
+DATADOG_ENV=production
+DATADOG_VERSION=1.0.0
+DATADOG_ENABLED=true
+DATADOG_TRACE_ENABLED=true
+DATADOG_PROFILING_ENABLED=true
+DATADOG_LOGS_INJECTION=true
+# Datadog Site (IMPORTANTE: US5)
+DATADOG_SITE=us5.datadoghq.com
